crates/ndc-sqlserver/tests/snapshots/query_tests__predicates__select_where_album_id_less_than.snap
---
source: crates/ndc-sqlserver/tests/query_tests.rs
expression: result
---
[
  {
    "rows": []
  }
]
