crates/ndc-sqlserver/tests/snapshots/query_tests__predicates__select_where_album_id_less_than_or_equal_to.snap
---
source: crates/ndc-sqlserver/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 1,
        "Title": "For Those About To Rock We Salute You"
      }
    ]
  }
]
