crates/ndc-sqlserver/tests/snapshots/query_tests__predicates__select_where_and.snap
---
source: crates/ndc-sqlserver/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "Van Halen III"
      }
    ]
  }
]
