crates/ndc-sqlserver/tests/snapshots/query_tests__predicates__select_where_name_eq.snap
---
source: crates/ndc-sqlserver/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 129,
        "Title": "Houses Of The Holy"
      }
    ]
  }
]
